Project

General

Profile

Actions

Bug #64782

closed

test_python.sh TestIoctx.test_locator failes in cases of SeaStore

Added by Xuehan Xu 2 months ago. Updated 18 days ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

=================================== FAILURES ===================================
____________________________ TestIoctx.test_locator ____________________________

self = <test_rados.TestIoctx object at 0x2b50b6e1a438>

    def test_locator(self):
        self.ioctx.set_locator_key("bar")
        self.ioctx.write('foo', b'contents1')
        objects = [i for i in self.ioctx.list_objects()]
        eq(len(objects), 1)
        eq(self.ioctx.get_locator_key(), "bar")
        self.ioctx.set_locator_key("")
        objects[0].seek(0)
        objects[0].write(b"contents2")
        eq(self.ioctx.get_locator_key(), "")
        self.ioctx.set_locator_key("bar")
        contents = self.ioctx.read("foo")
>       eq(contents, b"contents2")

../../../clone.client.0/src/test/pybind/test_rados.py:729:
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

a = b'contents1', b = b'contents2'

    def assert_equal(a, b):
>       assert a == b
E       AssertionError

../../../clone.client.0/src/test/pybind/assertions.py:2: AssertionError

Seems that this is due to SeaStore's onode tree doesn't save objects' location keys.


Related issues 1 (1 open0 closed)

Related to RADOS - Bug #65825: test_python.sh TestIoctx.test_locator failes: ClassicNew

Actions
Actions #1

Updated by Xuehan Xu 2 months ago

  • Pull request ID set to 56025
Actions #2

Updated by Matan Breizman 24 days ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Matan Breizman 18 days ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Kamoltat (Junior) Sirivadhna 3 days ago

  • Related to Bug #65825: test_python.sh TestIoctx.test_locator failes: Classic added
Actions

Also available in: Atom PDF