crimson/osd/osd_operations/client_requests: we don't support rados locator keys

Fixes: https://tracker.ceph.com/issues/64782
Signed-off-by: Xuehan Xu <xuxuehan@qianxin.com>